# streamlit_one_time_apps

./: main.py  pyproject.toml
