[tool.poetry]
name = "streamlit-one-time-apps"
version = "0.1.0"
description = "One off applications using streamlit"
authors = ["mwilsch <marius.santiago.wilsch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
